const-tests/duplicate_tr_key.stderr
error[E0080]: evaluation of constant value failed
 --> const-tests/duplicate_tr_key.rs:3:28
  |
3 |   const _ESC: Escape<8, 4> = Escape::const_new(
  |  ____________________________^
4 | |     '\\',
5 | |     ['\\', '[', ']', '"', '\0', '\n', '\r', '\t'],
6 | |     [('\n', "n"), ('\r', "r"), ('\0', "0"), ('\n', "t")], // duplicate key '\n'
7 | |     None,
8 | | );
  | |_^ evaluation panicked: assertion failed: tr[j].0 != tr[i].0
  |
note: inside `escaping::Escape::<'_, 8, 4>::const_new`
 --> src/lib.rs
  |
  |                     assert!(tr[j].0 != tr[i].0);
  |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ the failure occurred here
